Table meetings {
  Note: '個別の会議。定例会議から生成される場合もあれば、単発で作成される場合もある'
  id                       varchar [pk]
  title                    varchar
  heldAt                   timestamp
  meetingType              varchar [default: 'one_time', note: 'recurring_meeting / one_time / hearing / kickoff']
  transcriptionQuality     varchar [note: 'full / partial / poor']
  supplementaryMemo        text
  sequenceNumber           int
  previousMeetingId        varchar [ref: > meetings.id, note: '自己参照FK。直前の会議ID']
  estimatedDurationMinutes int
  estimationNote           text
  createdAt                timestamp

  indexes {
    previousMeetingId
    heldAt
  }
}

Table users {
  Note: 'システムのユーザー。認証はEntra IDに移譲し、外部IDとプロバイダー情報を保持する'
  id          varchar [pk]
  externalId  varchar [unique, note: 'Entra IDのユーザーID']
  email       varchar [unique]
  name        varchar
  displayName varchar
  createdAt   timestamp
  updatedAt   timestamp
}

Table organizations {
  Note: '組織。所属メンバーと配下定例の親エンティティ'
  id          varchar [pk]
  name        varchar
  description text
  createdAt   timestamp
  updatedAt   timestamp
}

Table organization_memberships {
  Note: '組織への所属。userId × organizationId を複合主キーとする'
  userId         varchar [ref: > users.id]
  organizationId varchar [ref: > organizations.id]
  role           varchar [note: 'owner / admin / member']
  joinedAt       timestamp

  indexes {
    (userId, organizationId) [pk]
    organizationId
  }
}

Table organization_invitations {
  Note: '組織への招待。同一組織への同一メールアドレスの同一statusの招待は重複させない'
  id             varchar [pk]
  organizationId varchar [ref: > organizations.id]
  email          varchar
  invitedBy      varchar [ref: > users.id]
  role           varchar [default: 'member', note: 'owner / admin / member']
  expiresAt      timestamp
  status         varchar [default: 'pending', note: 'pending / accepted / expired']
  createdAt      timestamp

  indexes {
    (organizationId, email, status) [unique]
    email
  }
}

Table recurring_meetings {
  Note: '定例会議。組織配下の継続的なミーティング枠'
  id             varchar [pk]
  organizationId varchar [ref: > organizations.id]
  name           varchar
  description    text
  scheduleCron   varchar
  createdAt      timestamp
  updatedAt      timestamp

  indexes {
    organizationId
  }
}

Table meeting_members {
  Note: '定例ごとのメンバー。recurringMeetingId × userId を複合主キーとする'
  recurringMeetingId varchar [ref: > recurring_meetings.id]
  userId             varchar [ref: > users.id]
  role               varchar [note: 'owner / member']
  joinedAt           timestamp

  indexes {
    (recurringMeetingId, userId) [pk]
    userId
  }
}

Table meeting_speakers {
  Note: '会議ごとの話者情報。書き起こし上の呼称とDBユーザーの紐付け状態を管理する'
  id               varchar [pk]
  meetingId        varchar [ref: > meetings.id]
  userId           varchar [ref: > users.id, note: 'NULLの場合は未解決']
  name             varchar [note: '書き起こし上の呼称。不明の場合はNULL']
  resolutionStatus varchar [note: 'resolved / unresolved / unknown']
  createdAt        timestamp
  updatedAt        timestamp

  indexes {
    meetingId
  }
}

Table meeting_estimation_breakdowns {
  Note: '次回会議の所要時間見積もり内訳。meetings.estimatedDurationMinutesの算出根拠を保持する'
  id        varchar [pk]
  meetingId varchar [ref: > meetings.id]
  type      varchar [note: 'required_task_check / open_issue_new / open_issue_recurring / overdue_task / new_topic / tentative_reconfirm / buffer']
  count     int
  minutes   int
  createdAt timestamp
  updatedAt timestamp

  indexes {
    meetingId
  }
}

Table rag_documents {
  Note: 'AI Searchに登録するRAGインデックスドキュメント。1会議=1ドキュメント'
  id                     varchar [pk]
  meetingId              varchar [unique, ref: > meetings.id]
  themeKeywords          json
  confirmedDecisionTexts json
  openIssueTexts         json
  participantNames       json
  indexedAt              timestamp [note: 'AI Searchへの登録日時。NULLの場合は未登録']
  createdAt              timestamp
  updatedAt              timestamp
}

Table related_past_meetings {
  Note: 'RAG検索で見つかった関連過去会議。recurring_flagで再議論検出に使用する'
  id               varchar [pk]
  meetingId        varchar [ref: > meetings.id, note: '現在の会議']
  relatedMeetingId varchar [ref: > meetings.id, note: '関連する過去会議']
  relevanceSummary text
  recurringFlag    boolean [default: false, note: '同一定例グループで2回以上類似トピックが検出された場合はtrue']
  createdAt        timestamp
  updatedAt        timestamp

  indexes {
    (meetingId, relatedMeetingId) [unique]
    meetingId
    relatedMeetingId
  }
}

Table decision_items {
  Note: '会議から抽出された決定事項・未決事項'
  id               varchar [pk]
  meetingId        varchar [ref: > meetings.id]
  title            varchar
  body             text
  sourceQuote      text    [note: 'AIが根拠とした発話1文']
  sourceContext    text    [note: '根拠周辺の文脈']
  status           varchar [note: 'draft / reviewing / open / decided / cancelled']
  decisionState    varchar [note: 'confirmed / tentative / open']
  reason           varchar [note: 'no_consensus / information_lack / intentional_defer / not_discussed']
  blockingItemId   varchar [note: 'ブロッキング対象のアイテムID']
  recurrenceCount  int
  ambiguityFlags   json
  decisionDeadline timestamp
  plannedMeetingId varchar [ref: > meetings.id, note: 'どの会議で議題に上げるか']
  decidedAt        timestamp
  decidedBy        varchar [ref: > users.id]
  version          int     [default: 0, note: '楽観的ロック用バージョン番号']
  createdAt        timestamp
  updatedAt        timestamp

  indexes {
    meetingId
    status
  }
}

Table decision_item_assignees {
  Note: '決定事項・未決事項の担当者。複数担当者に対応するための中間テーブル'
  id             varchar [pk]
  decisionItemId varchar [ref: > decision_items.id]
  userId         varchar [ref: > users.id]

  indexes {
    (decisionItemId, userId) [unique]
    decisionItemId
  }
}

Table tasks {
  Note: '会議から抽出された / 手動作成されたタスク。組織スコープ必須・発生源会議は任意・複数の定例（Project相当）に M:N で紐付け可能'
  id               varchar  [pk]
  organizationId   varchar  [ref: > organizations.id, note: '組織スコープ。認可・フィルタの単純化のため非正規化で保持']
  originMeetingId  varchar  [ref: > meetings.id, note: 'NULLの場合は手動作成タスク。会議削除時は SetNull でタスク本体は残す']
  decisionItemId   varchar  [ref: > decision_items.id, note: 'NULLの場合は独立したタスク']
  title            varchar
  body             text
  sourceQuote      text     [note: 'AIが根拠とした発話1文']
  sourceContext    text     [note: '根拠周辺の文脈']
  status           varchar  [note: 'draft / reviewing / todo / in_progress / done / rejected']
  priority         varchar  [note: 'required / optional']
  dueDateRaw       varchar  [note: '書き起こし上の期限表現をそのまま記録']
  dueDateEstimated boolean  [note: 'due_dateが推定値の場合はtrue']
  assigneeRaw      varchar  [note: '書き起こし上の担当者呼称']
  blockingItemId   varchar  [note: 'ブロッキング対象のアイテムID']
  carriedOverCount int      [note: '累計持ち越し回数']
  ambiguityFlags   json
  progressNote     text     [note: 'AI フェーズ2 の進捗メモ。手動経路では使用しない']
  dueDate          timestamp
  startDate        timestamp
  followUpDate     timestamp
  version          int      [default: 0, note: '楽観的ロック用バージョン番号']
  createdAt        timestamp
  updatedAt        timestamp

  indexes {
    organizationId
    originMeetingId
    decisionItemId
    dueDate
    startDate
    status
  }
}

Table task_assignees {
  Note: 'タスクの担当者。複数担当者に対応するための中間テーブル'
  id     varchar [pk]
  taskId varchar [ref: > tasks.id]
  userId varchar [ref: > users.id]

  indexes {
    (taskId, userId) [unique]
    taskId
  }
}

Table task_recurring_meetings {
  Note: 'タスクと定例（Project相当）の M:N 紐付け中間テーブル。1 タスクを複数の定例に attach 可能。将来 #153 で Project 層を導入する際は recurringMeetingId を projectId に張り替える。task.organizationId と recurringMeeting.organizationId の一致は API 層で必須バリデーション'
  taskId             varchar [ref: > tasks.id]
  recurringMeetingId varchar [ref: > recurring_meetings.id]

  indexes {
    (taskId, recurringMeetingId) [pk]
    recurringMeetingId
  }
}

Table ambiguous_infos {
  Note: '会議中に発生した曖昧な情報'
  id                       varchar  [pk]
  meetingId                varchar  [ref: > meetings.id]
  body                     text
  sourceQuote              text     [note: 'AIが根拠とした発話1文']
  sourceContext            text     [note: '根拠周辺の文脈']
  status                   varchar  [note: 'draft / reviewing / resolved / rejected']
  ambiguityType            varchar  [note: 'missing_speaker / transcription_error_low / transcription_error_high / no_assignee / no_deadline_mentioned / no_deadline_absolute / unclear_decision / insufficient_basis / unclear_scope']
  severity                 varchar  [note: 'high / medium / low']
  inferenceBasis           text     [note: 'missing_speakerの場合の推定根拠']
  dueDateRaw               varchar  [note: 'no_deadline_absoluteの場合の期限表現']
  dueDateEstimated         boolean  [note: 'AIが推定した場合はtrue']
  affectedItemIds          json     [note: '解消時に変更を反映すべきタスクID・未決事項IDの配列']
  resolutionType           varchar  [note: 'null = 未解消 / task / decision_item / discarded']
  resolvedToTaskId         varchar  [ref: > tasks.id, note: 'resolution_type = task のときのみ値が入る']
  resolvedToDecisionItemId varchar  [ref: > decision_items.id, note: 'resolution_type = decision_item のときのみ値が入る']
  version                  int      [default: 0, note: '楽観的ロック用バージョン番号']
  createdAt                timestamp
  updatedAt                timestamp

  indexes {
    meetingId
    status
  }
}

Table audit_logs {
  Note: '各リソースへの操作履歴。追記専用の不変ログ'
  id           varchar [pk]
  actorId      varchar [ref: > users.id]
  resourceType varchar [note: 'task / decision_item / ambiguous_info など']
  resourceId   varchar
  action       varchar [note: 'create / update / delete']
  beforeValue  json
  afterValue   json
  createdAt    timestamp

  indexes {
    (resourceType, resourceId)
    actorId
  }
}

Table read_logs {
  Note: 'ユーザーによるリソースの既読履歴。追記専用の不変ログ'
  id           varchar [pk]
  userId       varchar [ref: > users.id]
  resourceType varchar [note: 'task / decision_item / ambiguous_info など']
  resourceId   varchar
  readAt       timestamp
  createdAt    timestamp

  indexes {
    (userId, resourceType, resourceId)
  }
}